RESOLVED FIXED 255449
[Win][Clang] JavaScriptCore\tools\IntegrityInlines.h(108,5): error: too few arguments provided to function-like macro invocation
https://bugs.webkit.org/show_bug.cgi?id=255449
Summary [Win][Clang] JavaScriptCore\tools\IntegrityInlines.h(108,5): error: too few a...
Fujii Hironori
Reported 2023-04-14 05:27:36 PDT
[Win][Clang] JavaScriptCore\tools\IntegrityInlines.h(108,5): error: too few arguments provided to function-like macro invocation clang-cl reports an error for Windows port. [1156/6539] Building CXX object Source\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\__\__\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-d93d10ff-3.cpp.obj FAILED: Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/__/__/JavaScriptCore/DerivedSources/unified-sources/UnifiedSource-d93d10ff-3.cpp.obj C:\PROGRA~1\LLVM\bin\clang-cl.exe /nologo -TP -DBUILDING_JavaScriptCore -DBUILDING_WEBKIT=1 -DBUILDING_WITH_CMAKE=1 -DHAVE_CONFIG_H=1 -DJavaScriptCore_EXPORTS -DNOCRYPT -DNOMINMAX -DPAS_BMALLOC=1 -DUNICODE -DWINVER=0x601 -D_CRT_SECURE_NO_WARNINGS -D_HAS_EXCEPTIONS=0 -D_UNICODE -D_WIN32_WINNT=0x601 -D_WINDOWS -D_WINSOCKAPI_="" -IC:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\Headers -IC:\home\webkit\gc\WebKitBuild\Debug -IC:\home\webkit\gc\Source\JavaScriptCore -IC:\home\webkit\gc\Source\JavaScriptCore\API -IC:\home\webkit\gc\Source\JavaScriptCore\assembler -IC:\home\webkit\gc\Source\JavaScriptCore\b3 -IC:\home\webkit\gc\Source\JavaScriptCore\b3\air -IC:\home\webkit\gc\Source\JavaScriptCore\bindings -IC:\home\webkit\gc\Source\JavaScriptCore\builtins -IC:\home\webkit\gc\Source\JavaScriptCore\bytecode -IC:\home\webkit\gc\Source\JavaScriptCore\bytecompiler -IC:\home\webkit\gc\Source\JavaScriptCore\dfg -IC:\home\webkit\gc\Source\JavaScriptCore\disassembler -IC:\home\webkit\gc\Source\JavaScriptCore\disassembler\ARM64 -IC:\home\webkit\gc\Source\JavaScriptCore\disassembler\zydis\Zydis -IC:\home\webkit\gc\Source\JavaScriptCore\domjit -IC:\home\webkit\gc\Source\JavaScriptCore\ftl -IC:\home\webkit\gc\Source\JavaScriptCore\heap -IC:\home\webkit\gc\Source\JavaScriptCore\debugger -IC:\home\webkit\gc\Source\JavaScriptCore\inspector -IC:\home\webkit\gc\Source\JavaScriptCore\inspector\agents -IC:\home\webkit\gc\Source\JavaScriptCore\inspector\augmentable -IC:\home\webkit\gc\Source\JavaScriptCore\inspector\remote -IC:\home\webkit\gc\Source\JavaScriptCore\interpreter -IC:\home\webkit\gc\Source\JavaScriptCore\jit -IC:\home\webkit\gc\Source\JavaScriptCore\llint -IC:\home\webkit\gc\Source\JavaScriptCore\parser -IC:\home\webkit\gc\Source\JavaScriptCore\profiler -IC:\home\webkit\gc\Source\JavaScriptCore\runtime -IC:\home\webkit\gc\Source\JavaScriptCore\tools -IC:\home\webkit\gc\Source\JavaScriptCore\wasm -IC:\home\webkit\gc\Source\JavaScriptCore\wasm\js -IC:\home\webkit\gc\Source\JavaScriptCore\yarr -IC:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources -IC:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\inspector -IC:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\runtime -IC:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\yarr -IC:\home\webkit\gc\Source\JavaScriptCore\inspector\remote\socket -IC:\home\webkit\gc\WebKitBuild\Debug\WTF\Headers -imsvcC:\home\webkit\gc\WebKitLibraries\win\include /W4 -fdiagnostics-color=always -fcolor-diagnostics -pipe -Wno-noexcept-type -Wno-psabi -Wno-misleading-indentation -Wno-parentheses-equality -Qunused-arguments -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wno-unknown-argument -Wno-nonportable-include-path -Wno-unknown-pragmas -Wno-macro-redefined -Wno-undef /DWIN32 /D_WINDOWS /GR- /EHsc- -fno-strict-aliasing /Zi /Ob0 /Od /RTC1 -std:c++20 -MD /wd4018 /wd4060 /wd4068 /wd4100 /wd4127 /wd4146 /wd4189 /wd4201 /wd4244 /wd4245 /wd4251 /wd4275 /wd4267 /wd4305 /wd4309 /wd4312 /wd4324 /wd4389 /wd4456 /wd4457 /wd4458 /wd4459 /wd4505 /wd4611 /wd4646 /wd4701 /wd4702 /wd4706 /wd4715 /wd4722 /wd4723 /wd4805 /wd4838 /wd4840 /wd4996 /wd5205 /wd5054 /wd5055 /Zi /GS /EHa- /EHc- /EHs- /fp:except- /analyze- /bigobj -D_ENABLE_EXTENDED_ALIGNED_STORAGE /utf-8 /validate-charset -fmsc-version=1911 -ffp-contract=off -fno-slp-vectorize /YuC:/home/webkit/gc/WebKitBuild/Debug/Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/cmake_pch.hxx /FpC:/home/webkit/gc/WebKitBuild/Debug/Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/./cmake_pch.cxx.pch /FIC:/home/webkit/gc/WebKitBuild/Debug/Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/cmake_pch.hxx /showIncludes /FoSource\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\__\__\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-d93d10ff-3.cpp.obj /FdSource\JavaScriptCore\CMakeFiles\JavaScriptCore.dir\ -c -- C:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-d93d10ff-3.cpp In file included from C:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-d93d10ff-3.cpp:4: In file included from C:\home\webkit\gc\Source\JavaScriptCore\API/JSWeakPrivate.cpp:30: C:\home\webkit\gc\Source\JavaScriptCore\tools\IntegrityInlines.h(108,5): error: too few arguments provided to function-like macro invocation IA_ASSERT(structure, "structureID.bits 0x%x", structureID.bits()); ^ C:\home\webkit\gc\Source\JavaScriptCore\tools\Integrity.h(193,5): note: expanded from macro 'IA_ASSERT' IA_ASSERT_WITH_ACTION(assertion, { \ ^ C:\home\webkit\gc\Source\JavaScriptCore\tools\Integrity.h(186,42): note: expanded from macro 'IA_ASSERT_WITH_ACTION' IA_LOG(assertion, __VA_ARGS__); \ ^ C:\home\webkit\gc\Source\JavaScriptCore\tools\Integrity.h(180,9): note: macro 'IA_LOG' defined here #define IA_LOG(assertion, format, ...) do { \ ^ In file included from C:\home\webkit\gc\WebKitBuild\Debug\JavaScriptCore\DerivedSources\unified-sources\UnifiedSource-d93d10ff-3.cpp:4: In file included from C:\home\webkit\gc\Source\JavaScriptCore\API/JSWeakPrivate.cpp:30: C:\home\webkit\gc\Source\JavaScriptCore\tools\IntegrityInlines.h(108,5): error: use of undeclared identifier 'IA_LOG' IA_ASSERT(structure, "structureID.bits 0x%x", structureID.bits()); ^ C:\home\webkit\gc\Source\JavaScriptCore\tools\Integrity.h(193,5): note: expanded from macro 'IA_ASSERT' IA_ASSERT_WITH_ACTION(assertion, { \ ^ C:\home\webkit\gc\Source\JavaScriptCore\tools\Integrity.h(186,13): note: expanded from macro 'IA_ASSERT_WITH_ACTION' IA_LOG(assertion, __VA_ARGS__); \ ^ 2 errors generated.
Attachments
Fujii Hironori
Comment 1 2023-04-16 14:24:54 PDT
EWS
Comment 2 2023-04-16 18:56:19 PDT
Committed 263012@main (a40563bfe366): <https://commits.webkit.org/263012@main> Reviewed commits have been landed. Closing PR #12780 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-16 18:57:16 PDT
Note You need to log in before you can comment on or make changes to this bug.