JSC: IA_ASSERT can use __VA_OPT__ for COMPILER(MSVC) https://bugs.webkit.org/show_bug.cgi?id=255449

Reviewed by Ross Kirsling.

We can use__VA_OPT__ for COMPILER(MSVC) now. Removed COMPILER(MSVC)
condition from IA_ASSERT. This fixes a clang-cl build problem too.

* Source/JavaScriptCore/tools/Integrity.cpp:
* Source/JavaScriptCore/tools/Integrity.h:

Canonical link: https://commits.webkit.org/263012@main